# mako

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Makefile  README.md  install.sh  test-vm.swift
.github/workflows/: ci.yml
Formula/: mako.rb
crates/agent/: Cargo.toml
crates/agent/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  main.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  error.rs  lib.rs  protocol.rs  types.rs
crates/daemon/: Cargo.toml  build.rs
crates/daemon/src/: dns.rs  ffi.rs  http_proxy.rs  main.rs  memory.rs  port_forward.rs  socket_proxy.rs  vm.rs
gui/MakoApp/: Package.swift
gui/MakoApp/Sources/MakoApp/: LaunchdHelper.swift  MakoApp.swift  MakoViewModel.swift  MenuBarView.swift
swift-ffi/: Package.swift
swift-ffi/Sources/VirtualizationFFI/: MakoVM.swift
swift-ffi/include/: mako_ffi.h
tests/: test-cli.sh  test-compose.sh  test-vz-save-restore.swift
tests/compose-test/: docker-compose.yml
vm-image/: Dockerfile  Makefile
vm-image/rootfs-overlay/etc/: fstab  hostname  inittab
vm-image/rootfs-overlay/sbin/: mako-init
vm-image/scripts/: build-kernel.sh  build-rootfs.sh  setup-no-docker.sh
