[workspace]
resolver = "2"
members = [
    "crates/cli",
    "crates/daemon",
    "crates/agent",
    "crates/common",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/mako-vm/mako"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
futures = "0.3"
async-trait = "0.1"
bytes = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
colored = "2"
tabled = "0.16"

tempfile = "3"

mako-common = { path = "crates/common" }
