[package]
name = "mako-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Mako CLI -- manage the VM and proxy Docker commands"

[[bin]]
name = "mako"
path = "src/main.rs"

[dependencies]
mako-common = { workspace = true }

tokio = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

colored = { workspace = true }
tabled = { workspace = true }
chrono = { workspace = true }
libc = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
