[package]
name = "mako-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types and vsock protocol definitions for Mako"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
prost = { workspace = true }
tonic = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"
