[package]
name = "makod"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Mako host daemon -- VM management, Docker socket proxy, networking"

[[bin]]
name = "makod"
path = "src/main.rs"

[dependencies]
mako-common = { workspace = true }

tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

futures = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
libc = "0.2"
